--- a/config/shoryuken.yml
+++ b/config/shoryuken.yml
@@ -4,4 +4,4 @@ require: ./app/workers  # 使用するworkerを読み込み
 pidfile: tmp/pids/shoryuken.pid
 logfile: ./log/shoryuken.log
 queues:
-  - crawl
+  - <%= ENV['UPDATE_RACER_PROFILE_QUEUE_NAME'] %>
